# zenek-i-gienek-przejmuja-wladze-nad-swiatem

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
data/: CMakeLists.txt  ZenekGienek.desktop  net.dosowisko.SprayCheese.appdata.xml  net.dosowisko.ZenekGienek.appdata.xml  song1.flac  song2.flac  superexamples.desktop  zenekgienek.desktop
data/bullet/: 1.flac  10.flac  2.flac  3.flac  4.flac  5.flac  6.flac  7.flac  8.flac  9.flac
data/explosions/: 1.flac  2.flac  3.flac  4.flac  5.flac  6.flac  7.flac  8.flac
data/icons/: icon.rc  superexamples.icns  zenekgienek.icns
data/sprites/bad/: bad.ini
data/sprites/car/: car.ini
data/sprites/explosion/: explosion.ini
data/sprites/fake/: fake.ini
data/sprites/news/: news.ini
data/sprites/police/: ban.ini  normal.ini
data/sprites/teeth/: teeth.ini
data/sprites/user/: user.ini
data/voices/: 1.flac  10.flac  11.flac  12.flac  13.flac  14.flac  15.flac  16.flac  17.flac  2.flac  3.flac  4.flac  5.flac  6.flac  7.flac  8.flac  9.flac  bannivederci.flac  gienek.flac  intro1.flac  intro2.flac  intro3.flac  koniec.flac  ostroznie.flac  ostroznie2.flac  outro1.flac  outro2.flac  zenek.flac
flatpak/: net.dosowisko.ZenekGienek.json
src/: CMakeLists.txt  common.c  common.h  main.c
src/gamestates/: CMakeLists.txt  dosowisko.c  empty.c  example.c  loading.c
