SET(DATADIR "${SHARE_INSTALL_PREFIX}/${LIBSUPERDERPY_GAMENAME}/data")

if(APPLE)
	SET(DATADIR "${BIN_INSTALL_DIR}/${LIBSUPERDERPY_GAMENAME}.app/Contents/Resources/data") #OMG NASTY
endif(APPLE)

add_subdirectory(icons)
if(UNIX AND NOT APPLE AND NOT EMSCRIPTEN)
	install(FILES ${LIBSUPERDERPY_GAMENAME}.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
endif(UNIX AND NOT APPLE AND NOT EMSCRIPTEN)

install(DIRECTORY . DESTINATION ${DATADIR})

file(GLOB_RECURSE RES_FILES *)
add_custom_target(data SOURCES ${RES_FILES})
